fair_share(documentation): Added Documentation for handling the Pipeline

--- a/fair_schaer/4c_transform_to_trec_run_format.ipynb
+++ b/fair_schaer/4c_transform_to_trec_run_format.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e6c895c6",
+   "metadata": {},
+   "source": [
+    "## Transform `pd.DataFrame`-runs to `run.txt`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "94f63964-a123-4eb8-89da-96313cd4dcec",
@@ -47,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c95334da-08a4-47bb-a057-caf29e815663",
    "metadata": {},
    "outputs": [
@@ -178,10 +186,35 @@
     "    df_trec[\"name\"] = sub_collection\n",
     "\n",
     "    print(df_trec)\n",
-    "    df_trec.to_csv(sub_run_file, index=False, header=False)\n",
+    "    df_trec.to_csv(sub_run_file, index=False, header=False, sep=\" \")\n",
     "    #break\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7644b9a",
+   "metadata": {},
+   "source": [
+    "## Transform `run.txt` to `run.txt.gz`\n",
+    "\n",
+    "The `compress=\"gzip\"` in `df.to_csv()` seems to yield errors with the current format.</br>\n",
+    "A solution has to be made, where the gzip compressions needs to be applied after saving the raw text files.</br>\n",
+    "There is an easy workaround for MAC/Linux Distributions.</br>\n",
+    "\n",
+    "*Code*\n",
+    "\n",
+    "The code looks for `run.txt` files in the parent- and child directories.</br>\n",
+    "Every file found will then be compressed to its respective `run.txt.gz` file.\n",
+    "\n",
+    "`find -name \"run.txt\" -type f | xargs -I {} gzip {} > \"{}.gz\"`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "880e7c9c",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
